# uniformat-classifier

./: .gitignore  Indskrivning_template.xlsx  README.md  pyproject.toml  requirements.txt  smoketest.py  streamlit_app.py
data/smoketest/: Bulkhal - Landdybet 14.xlsx
src/uniformat_classifier/: __init__.py  __main__.py  activelearn.py  classifier.py  cli.py  excel_io.py  ingest.py  persist.py  taxonomy.py
